--- a/assignmentForC#/assignmentForC#.csproj
+++ b/assignmentForC#/assignmentForC#.csproj
@@ -43,12 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="outputPrime.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="assignment1\outputPrime.cs" />
+    <Compile Include="assignment1\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="assignment1\image.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
