--- a/assignmentForC#/assignmentForC#.csproj
+++ b/assignmentForC#/assignmentForC#.csproj
@@ -46,13 +46,29 @@
     <Compile Include="assignment1\outputPrime.cs" />
     <Compile Include="assignment1\Program.cs" />
     <Compile Include="assignment2\shape.cs" />
+    <Compile Include="assignment3\Form1.cs" />
+    <Compile Include="assignment3\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="assignment3\Program.cs" />
+    <Compile Include="assignment4\Form1.cs" />
+    <Compile Include="assignment4\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="assignment4\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="assignment3\说明.md" />
+    <None Include="assignment4\说明.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assignment1\image.png" />
+    <Content Include="assignment3\Form1 2025-03-08 20-44-07.mp4" />
+    <Content Include="assignment3\响铃提示.png" />
+    <Content Include="assignment3\输入错误字符串提示.png" />
+    <Content Include="assignment4\QQ2025327-121255.mp4" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
