--- a/assignmentForC#/assignmentForC#.csproj
+++ b/assignmentForC#/assignmentForC#.csproj
@@ -56,12 +56,18 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="assignment4\Program.cs" />
+    <Compile Include="assignment5\Form1.cs" />
+    <Compile Include="assignment5\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="assignment5\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="assignment3\说明.md" />
     <None Include="assignment4\说明.md" />
+    <None Include="assignment5\说明.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assignment1\image.png" />
@@ -69,6 +75,7 @@
     <Content Include="assignment3\响铃提示.png" />
     <Content Include="assignment3\输入错误字符串提示.png" />
     <Content Include="assignment4\QQ2025327-121255.mp4" />
+    <Content Include="assignment5\QQ202541-10393.mp4" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
