--- a/assignmentForC#/assignmentForC#.csproj
+++ b/assignmentForC#/assignmentForC#.csproj
@@ -61,6 +61,11 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="assignment5\Program.cs" />
+    <Compile Include="assignment6\Form1.cs" />
+    <Compile Include="assignment6\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="assignment6\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +73,7 @@
     <None Include="assignment3\说明.md" />
     <None Include="assignment4\说明.md" />
     <None Include="assignment5\说明.md" />
+    <None Include="assignment6\说明.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assignment1\image.png" />
@@ -76,6 +82,10 @@
     <Content Include="assignment3\输入错误字符串提示.png" />
     <Content Include="assignment4\QQ2025327-121255.mp4" />
     <Content Include="assignment5\QQ202541-10393.mp4" />
+    <Content Include="assignment6\image1.png" />
+    <Content Include="assignment6\image2.png" />
+    <Content Include="assignment6\image3.png" />
+    <Content Include="assignment6\网址无效.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
